docs: add section on Global Administrator Access to teams documentation

--- a/docs/deploystack/teams.mdx
+++ b/docs/deploystack/teams.mdx
@@ -268,6 +268,12 @@ When you delete a team, you lose **everything** associated with it:
 
 Your team permissions determine what actions you can perform:
 
+### Global Administrator Access
+
+Global administrators have enhanced visibility into all teams across the system:
+- Can view all teams created by any user through the admin user management interface
+- Have read-only access to team information for administrative oversight and support purposes
+
 ### Global vs Team Permissions
 
 - **Global Permissions**: Control system-wide access (user management, global settings)
