--- a/docs/deploystack/roles.mdx
+++ b/docs/deploystack/roles.mdx
@@ -22,8 +22,11 @@ User roles determine what actions a person can perform in DeployStack. Think of 
 - Manage roles and permissions
 - Access all system features
 - Manage all teams
+- View cloud credentials metadata across all teams (no credential values shown)
 
 **Important**: The first person to register automatically becomes a Global Administrator.
+
+**Note**: Global Administrators can see that teams have cloud credentials but cannot view the actual credential values for security reasons.
 
 ### Global User
 **Who needs this**: Regular users who want to deploy applications.
