--- a/docs/deploystack/teams.mdx
+++ b/docs/deploystack/teams.mdx
@@ -43,10 +43,13 @@ Each user can create and manage up to **3 teams total**, including your default 
 Teams serve as comprehensive containers for all your deployment resources:
 
 ### MCP Server Settings
-- All deployed MCP server configurations
-- Server deployment history and status
-- Custom server settings and parameters
-- Deployment logs and monitoring data
+- **Team MCP Servers**: Private MCP servers visible only to your team members
+- **Global MCP Server Access**: Browse and deploy community-wide MCP servers
+- **Server Management**: Team administrators can create, edit, and delete team servers
+- **Version Control**: Track different versions of your team's MCP servers
+- **GitHub Integration**: Automatic synchronization with your team's repositories (see [GitHub Integration Guide](./github-integration.mdx))
+- **Custom Configurations**: Team-specific server settings and parameters
+- **Deployment History**: Complete logs and monitoring data for team deployments
 
 ### Cloud Provider Credentials
 - **Render.com**: API tokens and service configurations
