--- a/docs/deploystack/development/frontend/index.mdx
+++ b/docs/deploystack/development/frontend/index.mdx
@@ -240,71 +240,7 @@ const props = defineProps<Props>()
 
 ## UI Components and Styling
 
-### TailwindCSS Integration
-
-The frontend uses TailwindCSS for styling with the shadcn-vue component library for consistent UI elements.
-
-#### Installing New shadcn-vue Components
-
-```bash
-npx shadcn-vue@latest add button
-npx shadcn-vue@latest add input
-npx shadcn-vue@latest add dialog
-```
-
-#### Custom Component Example
-
-```vue
-<template>
-  <div class="p-6 bg-white rounded-lg shadow-md border">
-    <h3 class="text-lg font-semibold text-gray-900 mb-4">
-      MCP Server Status
-    </h3>
-    <div class="flex items-center space-x-2">
-      <div class="w-3 h-3 bg-green-500 rounded-full"></div>
-      <span class="text-sm text-gray-700">Running</span>
-    </div>
-  </div>
-</template>
-```
-
-### Icons
-
-The project uses Lucide Icons through the `lucide-vue-next` package.
-
-#### Using Icons
-
-```vue
-<script setup lang="ts">
-import { Mail, Lock, User, Settings, Play, Stop } from 'lucide-vue-next'
-</script>
-
-<template>
-  <div class="icon-examples">
-    <!-- Basic usage -->
-    <Mail class="h-4 w-4 text-gray-500" />
-    
-    <!-- Different sizes -->
-    <Settings class="h-6 w-6" />
-    
-    <!-- Different colors -->
-    <User class="text-indigo-600" />
-    
-    <!-- Positioned icons -->
-    <div class="relative">
-      <input class="pl-10" />
-      <Lock class="absolute left-3 top-1/2 h-4 w-4 -translate-y-1/2 text-gray-500" />
-    </div>
-    
-    <!-- Interactive icons -->
-    <button @click="toggleServer" class="flex items-center space-x-2">
-      <Play v-if="!isRunning" class="h-4 w-4" />
-      <Stop v-else class="h-4 w-4" />
-      <span>{{ isRunning ? 'Stop' : 'Start' }} Server</span>
-    </button>
-  </div>
-</template>
-```
+The frontend uses **TailwindCSS** for styling with **shadcn-vue** component library for consistent UI elements. For comprehensive styling guidelines, component patterns, and design standards, see the [UI Design System](/deploystack/development/frontend/ui-design-system) documentation.
 
 ## Environment Configuration
 
@@ -341,7 +277,11 @@ const allEnvVars = getAllEnv()
 
 ### Service Layer Pattern
 
-The frontend uses a service layer pattern for API communication:
+**IMPORTANT**: The frontend uses a service layer pattern with direct `fetch()` calls for API communication. This is the established pattern and must be followed for consistency.
+
+#### ✅ Required Pattern - Direct Fetch Calls
+
+All API services must use direct `fetch()` calls instead of API client libraries. This ensures consistency across the codebase and simplifies maintenance.
 
 ```typescript
 // services/mcpServerService.ts
@@ -373,6 +313,29 @@ export class McpServerService {
   }
 }
 ```
+
+#### ❌ Avoid - API Client Libraries
+
+Do not use API client libraries like Axios, or custom API client wrappers:
+
+```typescript
+// DON'T DO THIS
+import axios from 'axios'
+import { apiClient } from '@/utils/apiClient'
+
+// Avoid these patterns
+const response = await axios.get('/api/servers')
+const data = await apiClient.get('/api/servers')
+```
+
+#### Service Layer Guidelines
+
+1. **Use Static Classes**: All service methods should be static
+2. **Direct Fetch**: Always use native `fetch()` API
+3. **Error Handling**: Throw meaningful errors for failed requests
+4. **Type Safety**: Define proper TypeScript interfaces for requests/responses
+5. **Consistent Naming**: Use descriptive method names (e.g., `getAllServers`, `createCategory`)
+6. **Base URL**: Always use environment variables for API endpoints
 
 ### Using Services in Components
 
@@ -410,11 +373,11 @@ onMounted(() => {
 
 Continue reading the detailed guides:
 
+- [UI Design System](/deploystack/development/frontend/ui-design-system) - Component patterns, styling guidelines, and design standards
 - [Environment Variables](/deploystack/development/frontend/environment-variables) - Complete environment configuration guide
 - [Global Event Bus](/deploystack/development/frontend/event-bus) - Cross-component communication system
 - [Internationalization (i18n)](/deploystack/development/frontend/internationalization) - Multi-language support
 - [Plugin System](/deploystack/development/frontend/plugins) - Extending functionality
-- [Router Optimization](/deploystack/development/frontend/router-optimization) - Performance improvements
 
 ## Docker Development
 
@@ -442,19 +405,3 @@ docker run -d -p 8080:80 \
   -e VITE_APP_TITLE="DeployStack" \
   deploystack/frontend:latest
 ```
-
-## Troubleshooting
-
-### Common Issues
-
-1. **Build failures**: Check Node.js and npm versions
-2. **API connection issues**: Verify `VITE_API_URL` environment variable
-3. **Styling issues**: Ensure TailwindCSS is properly configured
-4. **TypeScript errors**: Run `npm run lint` to check for issues
-
-### Development Tips
-
-- Use Vue DevTools browser extension for debugging
-- Enable TypeScript strict mode in `tsconfig.json`
-- Use ESLint and Prettier for code consistency
-- Test components in isolation when possible
