--- a/docs/deploystack/roles.mdx
+++ b/docs/deploystack/roles.mdx
@@ -23,6 +23,8 @@ User roles determine what actions a person can perform in DeployStack. Think of 
 - Access all system features
 - Manage all teams
 - View cloud credentials metadata across all teams (no credential values shown)
+- **MCP Catalog**: Full management of global MCP servers and categories
+- **MCP Oversight**: View all team MCP servers across the platform (read-only)
 
 **Important**: The first person to register automatically becomes a Global Administrator.
 
@@ -36,6 +38,7 @@ User roles determine what actions a person can perform in DeployStack. Think of 
 - Create up to 3 teams
 - Manage their own teams
 - Deploy applications through their teams
+- **MCP Catalog**: Browse and view global MCP servers only
 
 **Note**: This is the default role for new users.
 
@@ -51,6 +54,7 @@ User roles determine what actions a person can perform in DeployStack. Think of 
 - **Transfer team ownership** to another team member
 - Manage team deployments
 - Delete teams they own (except default teams)
+- **MCP Catalog**: View global servers + full management of team MCP servers
 
 **Important**: Team admins have full control over team membership and can manage all team members except the team owner.
 
@@ -77,6 +81,24 @@ The following table shows exactly what each role can do with team member managem
 - **Global admins** can override most restrictions but still cannot modify default teams
 - **3-member limit** applies to all teams (owner + 2 additional members maximum)
 
+## MCP Catalog Permissions
+
+The MCP (Model Context Protocol) Catalog has specific permissions based on your role:
+
+| Role | Global Servers | Team Servers | Can Create | Can Edit | Can Delete | Categories |
+|------|----------------|--------------|------------|----------|------------|------------|
+| global_admin | ✅ View/Manage All | ✅ View All Teams | ✅ Global only | ✅ Global only | ✅ Global only | ✅ Full CRUD |
+| team_admin | ✅ View only | ✅ View/Manage own team | ✅ Team only | ✅ Team only | ✅ Team only | ❌ View only |
+| team_user | ✅ View only | ✅ View team servers | ❌ No | ❌ No | ❌ No | ❌ View only |
+| global_user | ✅ View only | ❌ No access | ❌ No | ❌ No | ❌ No | ❌ View only |
+
+**MCP Catalog Notes:**
+- **Global Servers**: Community-wide MCP servers available to all users
+- **Team Servers**: Private MCP servers visible only to team members
+- **Categories**: Organizational categories for MCP servers (admin-managed)
+- **Global Admins**: Can see all team servers for administrative oversight but cannot modify them
+- **Team Isolation**: Teams can only manage their own servers, not other teams' servers
+
 ### Team User
 **Who needs this**: Basic team members who participate in deployments.
 
@@ -84,8 +106,9 @@ The following table shows exactly what each role can do with team member managem
 - View team information
 - See team members
 - Participate in team activities
+- **MCP Catalog**: View global servers + view team MCP servers (read-only)
 
-**Limitations**: Team users cannot add members, change roles, or manage other team members.
+**Limitations**: Team users cannot add members, change roles, manage other team members, or create/edit MCP servers.
 
 ## Understanding Teams
 
